@@ -1,0 +1,59 @@
+<gconfschemafile>
+  <schemalist>
+    <schema>
+      <key>/schemas/apps/screensaver/selection_mode</key>
+      <applyto>/apps/screensaver/selection_mode</applyto>
+      <owner>screensaver</owner>
+      <type>int</type>
+      <default>2</default>
+      <locale name="C">
+        <short>Current selection mode</short>
+        <long>Selection mode to use in capplet [0-4]</long>
+      </locale>
+    </schema>
+     <schema>
+      <key>/schemas/apps/screensaver/use_dpms</key>
+      <applyto>/apps/screensaver/use_dpms</applyto>
+      <owner>screensaver</owner>
+      <type>bool</type>
+      <default>false</default>
+      <locale name="C">
+        <short>Enable DPMS</short>
+        <long>Enable DPMS when starting screensaver</long>
+      </locale>
+    </schema> 
+    <schema>
+      <key>/schemas/apps/screensaver/standby_time</key>
+      <applyto>/apps/screensaver/standby_time</applyto>
+      <owner>screensaver</owner>
+      <type>int</type>
+      <default>0</default>
+      <locale name="C">
+        <short>Time before standby</short>
+        <long>Time to wait before setting computer to "standby"</long>
+      </locale>
+    </schema>
+    <schema>
+      <key>/schemas/apps/screensaver/suspend_time</key>
+      <applyto>/apps/screensaver/suspend_time</applyto>
+      <owner>screensaver</owner>
+      <type>int</type>
+      <default>0</default>
+      <locale name="C">
+        <short>Time before suspend</short>
+        <long>Time to wait before setting computer to "suspend"</long>
+      </locale>
+    </schema>
+    <schema>
+      <key>/schemas/apps/screensaver/shutdown_time</key>
+      <applyto>/apps/screensaver/shutdown_time</applyto>
+      <owner>screensaver</owner>
+      <type>int</type>
+      <default>0</default>
+      <locale name="C">
+        <short>Time before shutdown</short>
+        <long>Time to wait before shutting down computer</long>
+      </locale>
+    </schema>
+  </schemalist>
+</gconfschemafile>
