@@ -1,3 +1,15 @@
+2001-12-08  Richard Hestilow  <hestilow@ximian.com>
+
+	* preferences.c (preferences_load/save): Port to GConf.
+
+	* main.c (setup_capplet_widget): Port away from libcapplet,
+	use a GtkDialog.
+	(main): Call gnome_program_init.
+	
+	* screensaver.schemas: Added.
+	
+	* Makefile.am: Install schema file.
+
 2001-12-01  Richard Hestilow  <hestilow@ximian.com>
 
 	* Initial GNOME2 port.
